--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amyvolkert/burger.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/amyvolkert/burger/issues"
-  },
-  "homepage": "https://github.com/amyvolkert/burger#readme",
+  "description": "Eat-Da-Burger application",
+  "main": "server.js",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.9",
     "mysql": "^2.14.1"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "node server.js",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amyvolkert/burger.git"
+  },
+  "author": "Amy Volkert",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/amyvolkert/burger/issues"
+  },
+  "homepage": "https://github.com/amyvolkert/burger#readme"
 }
